TextFileCertificate JAAS uses SS, CA certs